# WebXl

./: README.md  app.py  pyproject.toml
.github/workflows/: FlaskApplicationTest.yml  formatter.yml
